--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
+  },
+  "engines": {
+    "npm": ">=9"
+  },
+  "vercel-build": {
+    "installCommand": "npm install --legacy-peer-deps"
   }
 }
